--- a/G4L.UserManagement.UI/src/app/leave-management/leave-request/leave-request.component.html
+++ b/G4L.UserManagement.UI/src/app/leave-management/leave-request/leave-request.component.html
@@ -86,7 +86,8 @@
                     | date: 'd MMM' }}
                   </div>
                   <div class="col">
-                    <select formControlName="leaveDayDuration" class="leave-day-duration" (change)='onOptionsSelected($event)'>
+                    <select formControlName="leaveDayDuration" class="leave-day-duration"
+                      (change)='onOptionsSelected($event)'>
                       <option *ngFor="let item of keys(daysType)" [ngValue]="item">{{item | removeUnderscore }}</option>
                     </select>
                   </div>
@@ -98,7 +99,8 @@
                   </div>
                   <div class="col">
                     <select [(ngModel)]="leave.leaveDayType" class="leave-day-duration">
-                      <option *ngFor="let item of keys(daysType)" [ngValue]="leave.leaveDayType">{{item | removeUnderscore }}</option>
+                      <option *ngFor="let item of keys(daysType)" [ngValue]="leave.leaveDayType">{{item |
+                        removeUnderscore }}</option>
                     </select>
                   </div>
                 </div>
@@ -148,17 +150,22 @@
         </div>
 
         <!-- attachments/ supporting documents -->
+
         <div class="row mt-3">
+
           <div class="col">
-            <div class="form-group">
+
+            <div class=" mt-3 form-group">
               <label class="form-control-label" for="input-documents" [ngClass]="{
                   'red-text':
                     formModel.controls['documents'].invalid &&
                     formModel.controls['documents'].touched
                 }">documents
 
-                <input type="file" style="visibility: hidden;" />
+                <input type="file" style="visibility: hidden; " />
               </label>
+
+           
 
               <input type="file" id="input-documents" class="form-control attachments" formControlName="documents"
                 [ngClass]="{
