Validating for sick  and family leave responsibillty

--- a/G4L.UserManagement.UI/src/app/leave-management/leave-request/leave-request.component.html
+++ b/G4L.UserManagement.UI/src/app/leave-management/leave-request/leave-request.component.html
@@ -214,7 +214,7 @@
                   formModel.controls['documents'].invalid &&
                   formModel.controls['documents'].touched
                 ">
-                <div *ngIf="formModel.controls['documents'].errors.required">
+                <div class="red-text" *ngIf="formModel.controls['documents'].errors.required">
                   Please type your documents for the approvers
                 </div>
               </div>
