--- a/G4L.UserManagement.UI/src/app/dashboard/views/admin-dashboard/admin-dashboard.component.html
+++ b/G4L.UserManagement.UI/src/app/dashboard/views/admin-dashboard/admin-dashboard.component.html
@@ -8,9 +8,7 @@
             <ng-container title>Total Trainers</ng-container>
             <ng-container total>3</ng-container>
             <ng-container icon>
-              <div
-                class="icon icon-shape bg-orange shadow text-center border-radius-md"
-              >
+              <div class="icon icon-shape bg-orange shadow text-center border-radius-md">
                 <i class="fa-solid fa-person-chalkboard"></i>
               </div>
             </ng-container>
@@ -22,9 +20,7 @@
             <ng-container title>Total Learners</ng-container>
             <ng-container total>150</ng-container>
             <ng-container icon>
-              <div
-                class="icon icon-shape bg-purple shadow text-center border-radius-md"
-              >
+              <div class="icon icon-shape bg-purple shadow text-center border-radius-md">
                 <i class="fa-solid fa-users"></i>
               </div>
             </ng-container>
@@ -36,9 +32,7 @@
             <ng-container title>Total Clients</ng-container>
             <ng-container total>1</ng-container>
             <ng-container icon>
-              <div
-                class="icon icon-shape bg-blue shadow text-center border-radius-md"
-              >
+              <div class="icon icon-shape bg-blue shadow text-center border-radius-md">
                 <i class="fa-solid fa-landmark"></i>
               </div>
             </ng-container>
@@ -74,8 +68,7 @@
                   12 PM - 3 PM
                 </p>
                 <p class="card-text grey-table text-xs">
-                  <i class="fa-solid fa-chalkboard-user grey-table"></i
-                  >&nbsp;&nbsp; Mrs. M. Wilson
+                  <i class="fa-solid fa-chalkboard-user grey-table"></i>&nbsp;&nbsp; Mrs. M. Wilson
                 </p>
               </div>
             </div>
@@ -95,8 +88,7 @@
                   - 11 AM
                 </p>
                 <p class="card-text grey-table text-xs">
-                  <i class="fa-solid fa-chalkboard-user grey-table"></i
-                  >&nbsp;&nbsp; Mr. M. Shilenge
+                  <i class="fa-solid fa-chalkboard-user grey-table"></i>&nbsp;&nbsp; Mr. M. Shilenge
                 </p>
               </div>
             </div>
