--- a/G4L.UserManagement.UI/src/app/leave-management/learner-table/learner-table.component.html
+++ b/G4L.UserManagement.UI/src/app/leave-management/learner-table/learner-table.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid py-4">
 
-  <div class="row align-items-center mb-4 containerSizing">
+  <div class="row align-items-center mb-2 containerSizing">
     <div class="row">
       <div class="col-12">
         <div class="card mb-4">
@@ -50,7 +50,7 @@
                       </td>
                       <td class="align-middle text-xs ps-2">
                         <div>
-                          <p class="text-secondary mb-0"> {{requests.status}}</p>
+                          <p class="text-secondary mb-0"><i class="fa-solid" [class]="getIcons(requests.status)"></i> {{requests.status}}</p>
                         </div>
                       </td>
                       <td class="align-middle text-xs ps-2">
@@ -60,7 +60,7 @@
                       </td>
                       <td class="align-middle dropdown">
                         <button class="btn btn-link text-secondary mb-0 dropdown-toggle" type="button"
-                          id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false" (click)="openDialog(user.id)">
+                          id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false" (click)="openDialog(requests,user)">
 
                           <i aria-hidden="true" class="fa fa-ellipsis-v text-xs"></i>
                         </button>
@@ -69,6 +69,26 @@
                   </tr>
                 </tbody>
               </table>
+              <ul class="pagination ">
+                <select formControlName="leaveDayDuration" class="leave-day-duration" (change)='onOptionsSelected($event)'>
+                  <option *ngFor="let item of rows" [ngValue]="item">{{item}}</option>
+                </select>
+                <li class="page-item">
+                  <a class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                </li>
+                <li class="page-item"><a class="page-link">1</a></li>
+                <li class="page-item"><a class="page-link">2</a></li>
+                <li class="page-item"><a class="page-link">3</a></li>
+                <li class="page-item">
+                  <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
