--- a/G4L.UserManagement.UI/src/app/leave-management/leave/leave.component.html
+++ b/G4L.UserManagement.UI/src/app/leave-management/leave/leave.component.html
@@ -19,26 +19,29 @@
 
         </div>
         <hr class="horizontal dark" />
-        <div class="row p-2">
-            <div class="col-md-3 col-xl-3 mb-1">
-                <div class="row align-items-center no-gutters ">
-                    <div class="col me-2">
-                        <div class="fw-bold text-xs mb-2"><span>
-                                <p><i class="fa-solid fa-user"></i>Name</p>
-                            </span></div>
-                        <div class="text-dark fw-bold h5 mb-0"><span>
-                                <h6><i class="fa-solid fa-building"></i>Sponsor</h6>
-                            </span></div>
-                        <div class="fw-bold text-xs mb-2"><span>
-                                <p><i class="fa-solid fa-briefcase"></i>Career</p>
-                            </span></div>
+        <!-- first row -->
+        <div class="row p-3">
+            <div class="col-md-3 col-xl-3 boxes">
+                <div class="card-body">
+                    <div class="row align-items-center no-gutters ">
+                        <div class="col me-2">
+                            <div class="fw-bold text-xs mb-2"><span>
+                                    <p><i class="fa-solid fa-user"></i> {{user.name}} {{user.surname}}
+                                    <p>
+                                </span></div>
+                            <div class="text-dark fw-bold mb-0"><span>
+                                    <p><i class="fa-solid fa-briefcase"></i> {{user.career}}</p>
+                                </span></div>
+                            <div class="text-dark fw-bold mb-0"><span>
+                                    <p><i class="fa-solid fa-building"></i> {{user.client}}</p>
+                                </span></div>
+                        </div>
                     </div>
-
-
                 </div>
             </div>
-            <div class="col-md-3 col-xl-3 mb-1">
-                <div class="card shadow border-start-success py-2">
+
+            <div class="col-md-3 col-xl-3 boxes1">
+                <div class="card shadow border-start-success py-2 cardStyling">
                     <div class="card-body">
                         <div class="row align-items-center no-gutters">
                             <div class="col me-2">
@@ -46,15 +49,16 @@
                                         <p>Days Used</p>
                                     </span></div>
                                 <div class="text-dark fw-bold h5 mb-0"><span>
-                                        <h6>10</h6>
+                                        <h6>{{requests.usedDays}}</h6>
                                     </span></div>
                             </div>
+
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-xl-3 mb-1">
-                <div class="card shadow border-start-warning py-2 ">
+            <div class="col-md-3 col-xl-3 boxes1">
+                <div class="card shadow border-start-warning py-2 cardStyling">
                     <div class="card-body">
                         <div class="row align-items-center no-gutters">
                             <div class="col me-2">
@@ -70,166 +74,187 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-xl-3 mb-1">
-                <div class="card shadow border-start-warning py-2">
-                    <div class="card-body">
-                        <div class="row align-items-center no-gutters">
-                            <div class="col me-2">
-                                <div class=" fw-bold text-xs mb-1 display-flex"><span>
-                                        <p><i class="fa-solid fa-thumbs-up"></i> PARTIALLY APPROVED</p>
-                                    </span></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- second row -->
-        <div class="row p-2">
-            <div class="col-md-3 col-xl-3 mb-1">
-                <div class="row align-items-center no-gutters ">
-                    <div class="col me-2">
-                        <div class="fw-bold text-xs mb-2"><span>
-                                <p> Leave Type</p>
-                            </span></div>
-                        <div class="text-dark fw-bold h5 mb-0"><span>
-                                <select name="leaves" id="leaves" disabled>
-                                    <option value="leave_types">Annual</option>
-                                </select>
-                            </span></div>
-                    </div>
-
-
-                </div>
-            </div>
-            <div class="col-md-3 col-xl-3 mb-1">
-                <div class="card shadow border-start-success py-2">
+            <div class="col-md-3 col-xl-3 boxes1">
+                <div class="card shadow border-start-warning py-2 cardStyling">
                     <div class="card-body">
                         <div class="row align-items-center no-gutters">
                             <div class="col me-2">
                                 <div class=" fw-bold text-xs mb-1"><span>
-                                        <p>Attachments</p>
-                                    </span></div>
-                                <div class="text-dark fw-bold h5 mb-0"><span>
-                                        <p>document1 document2</p>
+                                        <p><i class="fa-solid" [class]="getIcons(requests.status)"></i> {{requests.status}}</p>
                                     </span></div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-            <!-- second row -->
-
-            <!-- third row -->
-            <div class="row p-2">
-                <div class="col-md-3 col-xl-3 mb-1">
-                    <div class="card shadow border-start-success py-2">
-                        <div class="card-body">
-                            <div class="row align-items-center no-gutters">
-                                <div class="col me-2">
-                                    <div class=" fw-bold text-xs mb-1"><span>
-                                            <p>Days Used</p>
-                                        </span></div>
-                                    <div class="text-dark fw-bold h5 mb-0"><span>
-                                            <h6>10</h6>
-                                        </span></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-xl-3 mb-1">
-                    <div class="card shadow border-start-warning py-2 ">
-                        <div class="card-body">
-                            <div class="row align-items-center no-gutters">
-                                <div class="col me-2">
-                                    <div class=" fw-bold text-xs mb-1"><span>
-                                            <p>Days Available</p>
-                                        </span></div>
-                                    <div class="text-dark fw-bold h5 mb-0"><span>
-                                            <h6>2</h6>
-                                        </span></div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-xl-3 mb-1">
-                    <div class="card shadow border-start-warning py-2">
-                        <div class="card-body">
-                            <div class="row align-items-center no-gutters">
-                                <div class="col me-2">
-                                    <div class=" fw-bold text-xs mb-1 display-flex"><span>
-                                            <p><i class="fa-solid fa-thumbs-up"></i> PARTIALLY APPROVED</p>
-                                        </span></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- third row -->
-            <!-- learner textArea -->
-            <div class="row p-2 text-area">
-                <div class="col-md-3 col-xl-3 mb-1 w-100">
-                    <div class="row align-items-center no-gutters w-100">
-                        <div class="col me-2  w-100">
-                            <div class="fw-bold text-xs mb-2"><span>
-                                    <p> Comments </p>
-                                </span></div>
-                            <div class="text-dark fw-bold h5 mb-0 w-100"><span>
-                                <div class="form-group">
-                                    <textarea class="form-control w-100" id="exampleFormControlTextarea1" rows="3" disabled></textarea>
-                                  </div>
-                                </span></div>
-                        </div>
-
-
-                    </div>
-                </div>
-            </div>
-            <!-- learner textArea -->
-            <!-- trainer -->
-            <div class="row p-2 text-area">
-                <div class="col-md-3 col-xl-3 mb-1 w-100">
-                    <div class="row align-items-center no-gutters w-100">
-                        <div class="col me-2  w-100">
-                            <div class="fw-bold text-xs mb-2"><span>
-                                    <p> Note from trainer</p>
-                                </span></div>
-                            <div class="text-dark fw-bold h5 mb-0 w-100"><span>
-                                <div class="form-group">
-                                    <textarea class="form-control w-100" id="exampleFormControlTextarea1" rows="3" disabled></textarea>
-                                  </div>
-                                </span></div>
-                        </div>
-
-
-                    </div>
-                </div>
-            </div>
-            <!-- trainer -->
-            <!-- management -->
-            <div class="row p-2 text-area">
-                <div class="col-md-3 col-xl-3 mb-1 w-100">
-                    <div class="row align-items-center no-gutters w-100">
-                        <div class="col me-2  w-100">
-                            <div class="fw-bold text-xs mb-2"><span>
-                                    <p> Note from management</p>
-                                </span></div>
-                            <div class="text-dark fw-bold h5 mb-0 w-100"><span>
-                                <div class="form-group">
-                                    <textarea class="form-control w-100" id="exampleFormControlTextarea1" rows="3"></textarea>
-                                  </div>
-                                </span></div>
-                        </div>
-
-
-                    </div>
-                </div>
-            </div>
-            <!-- management -->
         </div>
+        <!-- /first row -->
+        <!-- second row -->
+        <div class="row p-4">
+            <div class="col-lg-2 col-xl-2 me-5">
+                <div class="row">
+                    <label>
+                        Leave type
+                    </label>
+                </div>
+                <div class="row p-3">
+                    <select disabled>
+                        <option>{{requests.leaveType}}</option>
+                    </select>
+                </div>
+
+            </div>
+            <div class="col-lg-4 col-xl-4 me-5">
+                <div class="row">
+                    <label>
+                        Attachments
+                    </label>
+                </div>
+                <div class="row">
+                    <div class="col-lg-5 col-xl-5">
+                        <div class="card bg-blue">
+                            <div class="card-body">
+                                file.pdf
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-5 col-xl-5">
+                        <div class="card bg-blue">
+                            <div class="card-body">
+                                image.jpg
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <!-- /socond row -->
+        <!-- third row -->
+        <div class="row p-4">
+            <div class="col-lg-3 col-xl-3 ">
+                <div class="row">
+                    <label>
+                        From
+                    </label>
+                </div>
+                <div class="row">
+                    <div class="card">
+                        <div class="card-body">
+                            <h6>Friday</h6>
+                            <div class="row">
+                                <div class="col-lg-12 col-xl-12 ">September 23</div>
+                                <div class="col-lg-6 col-xl-6">2022</div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col p-5">
+                <i class="fa-solid fa-arrow-right mt-4"></i>
+            </div>
+            <div class="col-lg-3 col-xl-3 me-5">
+                <div class="row">
+                    <label>
+                        To
+                    </label>
+                </div>
+                <div class="row">
+                    <div class="card">
+                        <div class="card-body">
+                            <h6>Friday</h6>
+                            <div class="row">
+                                <div class="col-lg-12 col-xl-12 text-secondary">September 23</div>
+                                <div class="col-lg-6 col-xl-6">2022</div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-3 col-xl-3 me-5">
+                <div class="row">
+                    <label>
+                        1 work day requested
+                    </label>
+                </div>
+                <div class="row">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="row">
+                                <p><i class="fa-solid fa-pen"></i> propose a change</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <!-- /third row -->
+        <!-- comment from learner -->
+        <div class="row p-4">
+            <div class="col">
+                <div class="row">
+                    <label>
+                        Comments
+                    </label>
+                </div>
+                <div class="row p-3">
+                    <textarea class="form-control rounded-0 col-lg-9 col-xl-9" id="exampleFormControlTextarea1" rows="3"
+                        disabled>{{requests.comments}}</textarea>
+                </div>
+
+            </div>
+        </div>
+        <!-- /comment from learner -->
+        <hr class="horizontal dark" />
+        <!-- note from trainer -->
+        <div class="row p-4">
+            <div class="col">
+                <div class="row">
+                    <label>
+                        Note from trainer
+                    </label>
+                </div>
+                <div class="row p-3">
+                    <textarea class="form-control rounded-0 col-lg-9 col-xl-9" id="exampleFormControlTextarea1" rows="3"
+                        disabled>The learner can be excused, i have no workshop on this day.</textarea>
+                </div>
+
+            </div>
+        </div>
+        <!-- /note from trainer -->
+        <hr class="horizontal dark" />
+        <!-- note from Management -->
+        <div class="row p-4">
+            <div class="col">
+                <div class="row">
+                    <label>
+                        Note from management
+                    </label>
+                </div>
+                <div class="row p-3">
+                    <textarea class="form-control rounded-0 col-lg-9 col-xl-9" id="exampleFormControlTextarea1"
+                        rows="3"></textarea>
+                </div>
+
+            </div>
+        </div>
+        <!-- /note from Management -->
+        <!-- buttons -->
+        <div class="row p-4">
+            <div class="col-8"></div>
+            <div class="col-2 text-end">
+                <a type="submit" class="btn btn-reject border-color">Reject request</a>
+            </div>
+            <div class="col-2 text-end">
+                <a type="submit" class="btn bg-approve text-light">Approve request</a>
+            </div>
+        </div>
+        <!-- /buttons -->
     </div>
+</div>
