commiting the changes

--- a/G4L.UserManagement.UI/src/app/leave-management/leave-history-card/leave-history-card.component.html
+++ b/G4L.UserManagement.UI/src/app/leave-management/leave-history-card/leave-history-card.component.html
@@ -1,4 +1,32 @@
-<div class="card h-75 overflow-hidden mt-4">
+<div class="col">
+    <div class="card">
+        <div class="card-body">
+            <div class="card-header pb-0">
+                <h6>Leave History</h6>
+            </div>
+            <ng-container *ngFor="let leave of leaves">
+                <div class="p-2" style="border-radius: 5px" *ngFor="let user of users">
+                    <div class="card mb-3 rounded-1 shadow-sm notification-card" *ngIf="leave.userId == user.id">
+                        <div class="vl"></div>
+                        <div class="card-body pls-2">
+                            <h6 class="card-title">{{getLeaveType(leave.leaveType)}}</h6>
+                        <p class="text-xs fw-bolder text-uppercase grey-table mb-2">
+                            {{user.name}} {{user.surname}}<br />
+                        </p>
+                            <p class="card-text mb-2 grey-table text-xs">
+                                <i class="fa-solid fa-calendar-day"></i>&nbsp;&nbsp; {{ leave.startDate | date: 'dd MMM YYYY' }} - {{ leave.endDate | date: 'dd MMM YYYY' }}
+                            </p>
+                            <p class="card-text grey-table text-xs">
+                                <i class="fa-solid fa-chalkboard-user grey-table"></i>&nbsp;&nbsp; {{getLeaveStatus(leave.status)}}
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </ng-container>
+        </div>
+    </div>
+</div>
+<!-- <div class="card h-75 overflow-hidden mt-4">
     <div class="card-body p-1">
         <div class="card-header pb-0">
             <h6>LEAVE HISTORY</h6>
@@ -20,7 +48,7 @@
                         </p>
                     </div>
                 </div>
-                <!-- <div class="card mt-2 mb-2 rounded-1 shadow-sm" style="border-radius: 1rem !important;border: none;background-color: #efefef;">
+                <div class="card mt-2 mb-2 rounded-1 shadow-sm" style="border-radius: 1rem !important;border: none;background-color: #efefef;">
                 <div class="card-body pls-2">
                     <div class="vl" style="border-left: 6px solid green;border-radius: 5px;height: 35%;position: absolute;left: 5%;margin-left: 0px;top: 11%;"></div>
                     <h4 class="card-title">Message | Project Simulation</h4>
@@ -29,8 +57,8 @@
                 <div class="card-body" style="background-color: #dcdcdc;border-radius: 0px 0px 15px 15px;">
                     <p class="card-text">&quot;Hi guys, <br />Please meet me on Friday for a sprint presentation&quot;</p>
                 </div>
-            </div> -->
+            </div> 
             </div>
         </ng-container>
     </div>
-</div>
+</div> -->
