--- a/G4L.UserManagement.UI/src/styles.css
+++ b/G4L.UserManagement.UI/src/styles.css
@@ -1137,3 +1137,7 @@ aside#sidenav-main {
   border-color: var(--g4l-btn-approve);
 }
 /* Sinovuyo Sikhisi */
+.list_page{
+  border-radius: 50px;
+  
+}
