--- a/G4L.UserManagement.UI/src/app/leave-management/learner-table/learner-table.component.html
+++ b/G4L.UserManagement.UI/src/app/leave-management/learner-table/learner-table.component.html
@@ -50,7 +50,8 @@
                       </td>
                       <td class="align-middle text-xs ps-2">
                         <div>
-                          <p class="text-secondary mb-0"><i class="fa-solid" [class]="getIcons(requests.status)"></i> {{requests.status}}</p>
+                          <p class="text-secondary mb-0"><i class="fa-solid" [class]="getIcons(requests.status)"></i>
+                            {{requests.status}}</p>
                         </div>
                       </td>
                       <td class="align-middle text-xs ps-2">
@@ -60,7 +61,8 @@
                       </td>
                       <td class="align-middle dropdown">
                         <button class="btn btn-link text-secondary mb-0 dropdown-toggle" type="button"
-                          id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false" (click)="openDialog(requests,user)">
+                          id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"
+                          (click)="openDialog(requests,user)">
 
                           <i aria-hidden="true" class="fa fa-ellipsis-v text-xs"></i>
                         </button>
@@ -69,29 +71,47 @@
                   </tr>
                 </tbody>
               </table>
-              <ul class="pagination ">
-                <select formControlName="leaveDayDuration" class="leave-day-duration" (change)='onOptionsSelected($event)'>
-                  <option *ngFor="let item of rows" [ngValue]="item">{{item}}</option>
-                </select>
-                <li class="page-item">
-                  <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                </li>
-                <li class="page-item"><a class="page-link">1</a></li>
-                <li class="page-item"><a class="page-link">2</a></li>
-                <li class="page-item"><a class="page-link">3</a></li>
-                <li class="page-item">
-                  <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                    <span class="sr-only">Next</span>
-                  </a>
-                </li>
-              </ul>
+            </div>
+            <div class="row">
+              <div class="col-lg-8 col-xl-8 m-2">
+                <div class="row">
+                  <div class="col-lg-1 col-md-3 col-xl-1">
+                    <select (change)="onChange($event)">
+                      <option>5</option>
+                      <option>10</option>
+                      <option>20</option>
+                    </select>
+                  </div>
+                  <div class="col-lg-3 col-md-3 col-xl-3">
+
+                    <p>items per pages</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-1 col-xl-1 m-2 text-end">
+                <ul class="pagination gap-2">
+                  <li class="list_page">
+                    <a class="page-link"(click)="getPagesPrevious()" aria-label="">
+                      <span aria-hidden="true">&lt;</span>
+                      <span class="sr-only"></span>
+                    </a>
+                  </li>
+                  <li class="list_page"><a class="page-link" (click)="one()">1</a></li>
+                  <li class="list_page"><a class="page-link" (click)="two()">2</a></li>
+                  <li class="list_page"><a class="page-link" (click)="three()">3</a></li>
+                  <li class="list_page">
+                    <a class="page-link"(click)="getPagesNext()" aria-label="">
+                      <span aria-hidden="true">&gt;</span>
+                      <span class="sr-only"></span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
