--- a/G4L.UserManagement.UI/src/app/leave-management/leave-management.component.html
+++ b/G4L.UserManagement.UI/src/app/leave-management/leave-management.component.html
@@ -1,129 +1,144 @@
 <ng-container *ngIf="isLearner;">
-  <div class="container-fluid py-4">
-    <div class="row align-items-center mb-2">
-      <div class="col-8"></div>
-      <div class="col-4 text-end">
-        <a class="btn btn-sm bg-2 gradient-primary mb-0 btn-dark text-uppercase" (click)="openDialog()">
-          Request a leave</a>
-      </div>
-    </div>
-
-    <div class="row mb-3">
-      <div class="col-4" *ngFor="let leaveBalance of leaveBalances">
-        <app-leave-balance-card>
-          <ng-container title>{{ leaveBalance?.balanceType }}</ng-container>
-          <ng-container total>
-            <p [style.color]="getPrimaryColor(leaveBalance?.balanceType)">Remaining</p>
-            <br>
-            {{ leaveBalance?.remaining }}
-          </ng-container>
-          <ng-container chart>
-            <div class="chart-wrapper">
-              {{ setData(leaveBalance?.used, leaveBalance?.remaining) }}
-              <app-doughnut-chart [dataSet]="dataSet" [primaryColor]="getPrimaryColor(leaveBalance?.balanceType)">
-              </app-doughnut-chart>
-            </div>
-          </ng-container>
-        </app-leave-balance-card>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-12">
-        <div class="card mb-4">
-          <div class="card-header pb-0">
-            <h6>Leave history</h6>
+  <div class="row">
+    <div class="col-lg-9 col-xl-9">
+      <div class="container-fluid py-4">
+        <div class="row align-items-center mb-2">
+          <div class="col-8"></div>
+          <div class="col-4 text-end">
+            <a class="btn btn-sm bg-2 gradient-primary mb-0 btn-dark text-uppercase"
+              (click)="openDialog(leaveBalances)">
+              Request a leave</a>
           </div>
-          <div class="card-body px-0 pt-0 pb-2">
-            <div class="table-responsive p-0">
-              <table class="table align-items-center mb-0">
-                <thead>
-                  <tr>
-                    <th class="text-uppercase text-secondary text-xs font-weight-bolder opacity-7">
-                      Leave Type
-                    </th>
-                    <th class="text-uppercase text-secondary text-xs font-weight-bolder opacity-7 ps-2">
-                      Date
-                    </th>
-                    <th class="text-uppercase text-secondary text-xs font-weight-bolder opacity-7 ps-2">
-                      Status
-                    </th>
-                    <th class="text-uppercase text-secondary text-xs font-weight-bolder opacity-7 ps-2">
-                      Comments
-                    </th>
-                    <th class="text-uppercase text-secondary text-xs font-weight-bolder opacity-7 ps-2"></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let application of leaveApplications">
-                    <td>
-                      <div class="d-flex">
-                        <div>
-                          <!-- <img
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-4" *ngFor="let leaveBalance of leaveBalances">
+            <app-leave-balance-card>
+              <ng-container title>{{ leaveBalance?.balanceType }}</ng-container>
+              <ng-container total>
+                <p [style.color]="getPrimaryColor(leaveBalance?.balanceType)">Remaining</p>
+                <br>
+                {{ leaveBalance?.remaining }}
+              </ng-container>
+              <ng-container chart>
+                <div class="chart-wrapper">
+                  {{ setData(leaveBalance?.used, leaveBalance?.remaining) }}
+                  <app-doughnut-chart [dataSet]="dataSet" [primaryColor]="getPrimaryColor(leaveBalance?.balanceType)">
+                  </app-doughnut-chart>
+                </div>
+              </ng-container>
+            </app-leave-balance-card>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12">
+            <div class="card mb-4">
+              <div class="card-header pb-0">
+                <h6>Leave history</h6>
+              </div>
+              <div class="card-body px-0 pt-0 pb-2">
+                <div class="table-responsive p-0">
+                  <table class="table align-items-center mb-0">
+                    <thead>
+                      <tr>
+                        <th class="text-uppercase text-secondary text-xs font-weight-bolder opacity-7">
+                          Leave Type
+                        </th>
+                        <th class="text-uppercase text-secondary text-xs font-weight-bolder opacity-7 ps-2">
+                          Date
+                        </th>
+                        <th class="text-uppercase text-secondary text-xs font-weight-bolder opacity-7 ps-2">
+                          Status
+                        </th>
+                        <th class="text-uppercase text-secondary text-xs font-weight-bolder opacity-7 ps-2">
+                          Comments
+                        </th>
+                        <th class="text-uppercase text-secondary text-xs font-weight-bolder opacity-7 ps-2"></th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr *ngFor="let application of leaveApplications">
+                        <td>
+                          <div class="d-flex">
+                            <div>
+                              <!-- <img
                           src="../assets/img/team-2.jpg"
                           class="avatar avatar-sm me-3"
                           alt="user1"
                         /> -->
-                      </div>
-                      <div class="d-flex flex-column justify-content-center">
-                        <p class="text-secondary mb-0 text-xs">
-                          {{ application?.leaveType | removeUnderscore  }}
-                        </p>
-                      </div>
-                    </div>
-                  </td>
-                  <td class="align-middle text-xs ps-2">
-                    <p class="font-weight-bold mb-0">{{ application?.startDate | date: 'dd MMM YYYY' }} - {{ application?.endDate  | date: 'dd MMM YYYY' }}</p>
-                  </td>
-                  <td class="align-middle text-xs ps-2">
-                    <p class="font-weight-bold mb-0">
-                      <i class="fa-solid" [class]="getStatusIcon(application?.status)"></i>
-                      {{ application?.status | removeUnderscore }} </p>
-                  </td>
-                  <td class="align-middle text-xs ps-2">
-                    <p class="font-weight-bold mb-0">{{ application?.comments }} </p>
-                  </td>
-                  <td class="align-middle dropdown">
-                    <button
-                      class="btn btn-link text-secondary mb-0 dropdown-toggle"
-                      type="button"
-                      id="dropdownMenuButton1"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="false"
-                    >
-                      <i
-                        aria-hidden="true"
-                        class="fa fa-ellipsis-v text-xs"
-                      ></i>
-                    </button>
+                            </div>
+                            <div class="d-flex flex-column justify-content-center">
+                              <p class="text-secondary mb-0 text-xs">
+                                {{ application?.leaveType | removeUnderscore }}
+                              </p>
+                            </div>
+                          </div>
+                        </td>
+                        <td class="align-middle text-xs ps-2">
+                          <p class="font-weight-bold mb-0">{{ application?.startDate | date: 'dd MMM YYYY' }} - {{
+                            application?.endDate | date: 'dd MMM YYYY' }}</p>
+                        </td>
+                        <td class="align-middle text-xs ps-2">
+                          <p class="font-weight-bold mb-0">
+                            <i class="fa-solid" [class]="getStatusIcon(application?.status)"></i>
+                            {{ application?.status | removeUnderscore }}
+                          </p>
+                        </td>
+                        <td class="align-middle text-xs ps-2">
+                          <p class="font-weight-bold mb-0">{{ application?.comments }} </p>
+                        </td>
+                        <td class="align-middle dropdown">
+                          <button class="btn btn-link text-secondary mb-0 dropdown-toggle" type="button"
+                            id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i aria-hidden="true" class="fa fa-ellipsis-v text-xs"></i>
+                          </button>
 
-                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
 
-                        <li>
-                          <a class="dropdown-item" (click)="cancelApplication(application)">
-                            <i class="fa-solid fa-user-pen text-xs"></i>&nbsp;&nbsp;Cancel leave</a>
-                        </li>
-                      </ul>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-              <!--Added Pagination-->
-              <!-- <nav aria-label="Page navigation example" style="Margin-top:20px; Margin-left:20px">
-              <ul class="pagination">
-                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">Next</a></li>
-              </ul>
-            </nav> -->
+                            <li>
+                              <a class="dropdown-item" (click)="cancelApplication(application)">
+                                <i class="fa-solid fa-user-pen text-xs"></i>&nbsp;&nbsp;Cancel leave</a>
+                            </li>
+                          </ul>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="col-lg-3 col-xl-3">
+      <div class="col">
+        <div class="card">
+          <div class="card-body p-3">
+            <div class="card-header pb-0">
+              <h6>UPCOMING PUBLIC HOLIDAYS</h6>
+            </div>
+            <div class="p-2" style="border-radius: 5px" *ngFor="let holiday of holidays">
+              <div class="card mb-3 rounded-1 shadow-sm notification-card">
+                <div class="vl"></div>
+                <div class="card-body pls-2">
+                  <h6 class="card-title">{{holiday.name}}</h6>
+                  <p class="card-text mb-2 grey-table text-xs">
+                    <i class="fa-solid fa-calendar-day"></i>&nbsp;&nbsp; {{ holiday.date | date: 'dd MMM YYYY' }}
+                  </p>
+                  <p class="card-text grey-table text-xs">
+                    <i class="fa-solid fa-chalkboard-user grey-table"></i>&nbsp;&nbsp; {{ holiday.date | date: ' EEEE'
+                    }}
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
   </div>
 </ng-container>
 <ng-container *ngIf="isAdmin || isTrainer;">
