--- a/G4L.UserManagement.UI/src/app/usermanagement/sponsor/sponsor.component.css
+++ b/G4L.UserManagement.UI/src/app/usermanagement/sponsor/sponsor.component.css
@@ -2,8 +2,31 @@
     padding: 1.5rem;
   }
 
-  .container {
-    height: 350px;
-    overflow-y: scroll;
-   }
+.container {
+  height: 300px;
+  overflow-y: scroll;
+  }
+
+img {
+  display: block;
+  vertical-align: middle;
+  }
+
+.hidden {
+  display: none;
+}
+
+.profile-image {
+  width: 8rem;
+  object-fit: cover;
+  height: 8rem;
+  border-radius: 10px;
+  display: block;
+  vertical-align: middle;
+}
+
+textarea{
+  height: 8rem;
+}
+
   
